// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Movies 1`] = `
<div>
  <div
    class="colA"
  >
    <h2>
      Movies 
    </h2>
    <ul>
      <li>
        <span>
          Hello
        </span>
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-list "
          data-icon="list"
          data-prefix="fas"
          data-testid="context-menu-open"
          focusable="false"
          role="img"
          style="cursor: context-menu;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M40 48C26.7 48 16 58.7 16 72l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24L40 48zM192 64c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L192 64zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zM16 232l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24zM40 368c-13.3 0-24 10.7-24 24l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24l-48 0z"
            fill="currentColor"
          />
        </svg>
         
      </li>
    </ul>
  </div>
</div>
`;

exports[`NextEpisodeAirs > works 1`] = `
<div>
  <small>
    Episode 2 "EP2" airs on 24/04/2020
     
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-73o1y3-MuiTypography-root-MuiLink-root"
      data-discover="true"
      href="/select/10000/season/1/episode/2/options"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-magnifying-glass "
        data-icon="magnifying-glass"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
          fill="currentColor"
        />
      </svg>
    </a>
  </small>
  ,
</div>
`;

exports[`Progress > complex 1`] = `<div />`;

exports[`Progress > complex 2`] = `
<div>
  <progress
    title="50% (Unknown time remaining)"
    value="0.5"
  />
</div>
`;

exports[`Progress > complex 3`] = `
<div>
  <progress
    title="75% (Unknown time remaining)"
    value="0.75"
  />
</div>
`;

exports[`Progress > simple 1`] = `<div />`;

exports[`Progress > simple 2`] = `
<div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-circle-check "
    data-icon="circle-check"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Progress > simple 3`] = `
<div>
  <progress
    title="50% (6 minutes remaining)"
    value="0.5"
  />
</div>
`;

exports[`TVShows 1`] = `
<div>
  <div>
    <div
      class="colB"
    >
      <h2>
        TV Shows 
      </h2>
      <div>
        <h3>
          Title
           
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-list "
            data-icon="list"
            data-prefix="fas"
            data-testid="context-menu-open"
            focusable="false"
            role="img"
            style="cursor: context-menu;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M40 48C26.7 48 16 58.7 16 72l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24L40 48zM192 64c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L192 64zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zM16 232l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24zM40 368c-13.3 0-24 10.7-24 24l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24l-48 0z"
              fill="currentColor"
            />
          </svg>
        </h3>
        <div
          class="Collapsible"
        >
          <span
            aria-controls="collapsible-content-tv-1-season-1"
            aria-disabled="false"
            aria-expanded="true"
            class="Collapsible__trigger is-open"
            id="collapsible-trigger-tv-1-season-1"
            role="button"
          >
            <h4>
              Season 
              1
               
               
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-73o1y3-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/select/1/season/1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-magnifying-glass "
                  data-icon="magnifying-glass"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
                    fill="currentColor"
                  />
                </svg>
              </a>
               
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-2x "
                data-icon="caret-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="transform-origin: 0.3125em 0.625em; cursor: pointer;"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(160 256)"
                >
                  <g
                    transform="translate(0, 64)  scale(1, 1)  rotate(0 0 0)"
                  >
                    <path
                      d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
                      fill="currentColor"
                      transform="translate(-160 -256)"
                    />
                  </g>
                </g>
              </svg>
            </h4>
          </span>
          <div
            aria-labelledby="collapsible-trigger-tv-1-season-1"
            class="Collapsible__contentOuter"
            id="collapsible-content-tv-1-season-1"
            role="region"
            style="height: auto; transition: none; overflow: hidden;"
          >
            <div
              class="Collapsible__contentInner"
            >
              <ol />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
